--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <title>Page Title</title>
 </head>
 <body>
-<img src=https://givemesport.azureedge.net/images/18/03/02/33d764d6a5a79db751929991947771eb/960.jpg width="500">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/jCrjku4mP1w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<body style="background-image:url('https://m.media-amazon.com/images/S/aplus-media/vc/7895a621-9359-412d-92d2-94c15adc4c70._SL300__.jpg')">
+<h1 style="color:Red;"> Lionel Messi</h1>
+<img src=https://givemesport.azureedge.net/images/18/03/02/33d764d6a5a79db751929991947771eb/960.jpg width="250">
+<iframe width="250" height="315" src="https://www.youtube.com/embed/jCrjku4mP1w" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 
 
-<h1>Lionel Messi</h1>
-<p>Lionel Messi is one of the best soccer players in the world. When he was at Argentina, Messi scored 4 goals in a single game on 4 occasions! As of June 19, 2018, his net worth is $400 billion.</p>
-
+<h1 style="color:Red;">Who is Messi?</h1>
+<p style="color:White;" style="font-size:160%;">Lionel Messi is one of the best soccer players in the world. When he was at Argentina, Messi scored 4 goals in a single game on 4 occasions! As of June 19, 2018, his net worth is $400 billion.</p>
+<p style="color:Red;"> He started out playing for Nowell's Old Boys soccer team from 1994 to 2000. Then in 2004 he started playing for FC Barcelona. He has played for Barcellona's C and B teams. Also in 2004 he stared playing for  Argentina's national soccer team. He currently still plays for FC Barcelona and Argentina.</p>
 </body>
 </html>
